--- a/swagger.html
+++ b/swagger.html
@@ -52,9 +52,9 @@ overview: true
         addApiKeyAuthorization();
       });
 
-        var appid = "5ed48098";
-        $('#appid').val(appid);
-        addApiKeyAuthorization();     
+       // var appid = "5ed48098";
+        //$('#appid').val(appid);
+        //addApiKeyAuthorization();     
 
       window.swaggerUi.load();
   });
