--- a/swagger.html
+++ b/swagger.html
@@ -59,7 +59,7 @@ overview: true
       window.swaggerUi.load();
 		      
 		var boxes = document.getElementsByTagName("INPUT");
-		
+		console.log('doing!');
 		for(var i = 0; i < boxes.length; i++)
 			{	
 			console.log('--');	
