--- a/swagger.html
+++ b/swagger.html
@@ -59,7 +59,8 @@ overview: true
       window.swaggerUi.load();
 		      
 		var boxes = document.getElementsByTagName("INPUT");
-		console.log('doing!');
+		console.log('doing2!');
+		console.log(boxes);
 		for(var i = 0; i < boxes.length; i++)
 			{	
 			console.log('--');	
