--- a/swagger.html
+++ b/swagger.html
@@ -61,12 +61,10 @@ overview: true
 		var boxes = document.getElementsByTagName("INPUT");
 		console.log('doing2!');
 		console.log(boxes);
-		for(var i = 0; i < boxes.length; i++)
-			{	
-			console.log('--');	
-			console.log(boxes[i].name);
-			};    
-      
+		$.each(boxes, function(box) {
+			 console.log('--');
+			 console.log(box);  
+     	});   
   });
   </script>  
 
