--- a/swagger.html
+++ b/swagger.html
@@ -59,7 +59,7 @@ overview: true
       window.swaggerUi.load();
 		      
 		var boxes = document.getElementsByTagName("INPUT");
-		console.log('doing2!');
+		console.log('doing123');
 		console.log(boxes);
 		$.each(boxes, function(box) {
 			 console.log('--');
