--- a/status/index.html
+++ b/status/index.html
@@ -850,7 +850,7 @@ title: Status
 </style>
 
 <div id="apiscience-status-page">
-  <div class="hidden" id="api-key">5yW1_HFQe395wpLgZiee1g</div>
+  <div class="hidden" id="api-key">ASzjKOjFKPYC0D-RBGPWtw</div>
   <div class="hidden" id="monitor-id">1571359</div>
 
   <h2 id="status_page_detail"></h2>
