--- a/code/index.html
+++ b/code/index.html
@@ -3,4 +3,33 @@ layout: page
 title: Code
 ---
 
-<script type='text/javascript' async src='https://apimatic.io/js/apimatic-widget.js'></script><div id='apimatic-widget' data-apikey='eFG5Rgm_jZRg5lmWp9jUxHqx42BhZzYmvEkaklvmcKrmhgfh4gihE0wkAJvE7H1g'></div>
+<p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/apimatic-logo.png" align="right" width="120" style="padding: 15px;" /></p>
+
+<p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for the API API.</p>
+
+<table align="center" id="code-page" width="100%">
+	<tr>
+		<td width="50" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-php.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-php-file.png" width="50" />
+			</a>
+		</td>
+		<td>
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-php.zip">
+				PHP
+			</a>			
+		</td>
+	</tr>
+	<tr>
+		<td width="50" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-python.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-python-file.png" width="50" />
+			</a>
+		</td>
+		<td>
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-python.zip">
+				PHP
+			</a>			
+		</td>
+	</tr>	
+</table>
