add animatic icons

--- a/code/index.html
+++ b/code/index.html
@@ -7,11 +7,11 @@ title: Code
 
 <p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for the API API.</p>
 
-<table align="center" id="code-page" width="100%">
+<table align="center" width="100%">
 	<tr>
 		<td width="50" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-php.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-php-file.png" width="50" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/php.png" width="50" />
 			</a>
 		</td>
 		<td>
@@ -23,7 +23,7 @@ title: Code
 	<tr>
 		<td width="50" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-python.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-python-file.png" width="50" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/python.png" width="50" />
 			</a>
 		</td>
 		<td>
