--- a/code/index.html
+++ b/code/index.html
@@ -5,31 +5,54 @@ title: Code
 
 <p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/apimatic-logo.png" align="right" width="120" style="padding: 15px;" /></p>
 
-<p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for the API API.</p>
+<p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for my API API.</p>
 
 <table align="center" width="100%">
 	<tr>
-		<td width="50" align="center">
+		<td width="100" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-php.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/php.png" width="50" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/php.png" width="100" />
 			</a>
 		</td>
-		<td>
-			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-php.zip">
-				PHP
-			</a>			
-		</td>
-	</tr>
-	<tr>
-		<td width="50" align="center">
+		<td width="100" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-python.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/python.png" width="50" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/python.png" width="100" />
 			</a>
 		</td>
-		<td>
-			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-python.zip">
-				PHP
-			</a>			
-		</td>
+		<td width="100" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-ruby.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/ruby.png" width="100" />
+			</a>
+		</td>	
+		<td width="100" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-java.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/java.png" width="100" />
+			</a>
+		</td>	
+		<td width="100" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-csharp.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/csharp.png" width="100" />
+			</a>
+		</td>		
+		<td width="100" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-javascript.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/javascript.png" width="100" />
+			</a>
+		</td>		
+		<td width="100" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-javascript.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/angular.png" width="100" />
+			</a>
+		</td>	
+		<td width="100" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-objc.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/objc.png" width="100" />
+			</a>
+		</td>		
+		<td width="100" align="center">
+			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-android.zip">
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/android.png" width="100" />
+			</a>
+		</td>										
 	</tr>	
 </table>
