--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@ title: Code
 
 <p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/apimatic-logo.png" align="right" width="120" style="padding: 15px;" /></p>
 
-<p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for my API API.</p>
+<p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for my API API. I will update the SDKs as I add new endpoints to each API, but sometimes my adding of endpoints moves faster than the time I have for generating SDKs.</p>
 
 <table align="center" width="100%">
 	<tr>
@@ -55,6 +55,8 @@ title: Code
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-android.zip">
 				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/android.png" width="100" />
 			</a>
-		</td>										
+		</td>
+		<td width="100" align="center"></td>										
 	</tr>	
 </table>
+<p>If you need any specific integration code, or help please use the <a href="https://github.com/Kin-Lane/api/issues">issue management</a> on the Github repository for the API.</p>
