--- a/code/index.html
+++ b/code/index.html
@@ -7,56 +7,56 @@ title: Code
 
 <p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for my API API. I will update the SDKs as I add new endpoints to each API, but sometimes my adding of endpoints moves faster than the time I have for generating SDKs.</p>
 
-<table align="center" width="100%">
+<table align="center" width="90%" cellpadding="5" cellspacing="5" style="margin-left: 30px; margin-top: 5px; margin-bottom: 10px;">
 	<tr>
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-php.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/php.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/php.png" width="75" />
 			</a>
 		</td>
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-python.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/python.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/python.png" width="75" />
 			</a>
 		</td>
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-ruby.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/ruby.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/ruby.png" width="75" />
 			</a>
 		</td>	
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-java.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/java.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/java.png" width="75" />
 			</a>
 		</td>	
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-csharp.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/csharp.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/csharp.png" width="75" />
 			</a>
 		</td>		
 	</tr>
 	<tr>
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-javascript.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/javascript.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/javascript.png" width="75" />
 			</a>
 		</td>		
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-javascript.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/angular.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/angular.png" width="75" />
 			</a>
 		</td>	
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-objc.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/objc.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/objc.png" width="75" />
 			</a>
 		</td>		
-		<td width="100" align="center">
+		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-android.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/android.png" width="100" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/android.png" width="75" />
 			</a>
 		</td>
-		<td width="100" align="center"></td>										
+		<td width="75" align="center"></td>										
 	</tr>	
 </table>
 <p>If you need any specific integration code, or help please use the <a href="https://github.com/Kin-Lane/api/issues">issue management</a> on the Github repository for the API.</p>
