--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Code
 ---
 
-<p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/apimatic-logo.png" align="right" width="120" style="padding: 15px;" /></p>
+<p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/apimatic-logo.png" align="right" width="150" /></p>
 
 <p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for my API API. I will update the SDKs as I add new endpoints to each API, but sometimes my adding of endpoints moves faster than the time I have for generating SDKs.</p>
 
