--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Code
 ---
 
-<p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/apimatic-logo.png" align="right" width="150" /></p>
+<p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/apimatic-logo.png" align="right" width="90" /></p>
 
 <p>These are the code libraries I have generated using <a href="http://api-codegen.apievangelist.com/">APIMATIC</a> using the Swagger definition for my API API. I will update the SDKs as I add new endpoints to each API, but sometimes my adding of endpoints moves faster than the time I have for generating SDKs.</p>
 
@@ -11,49 +11,49 @@ title: Code
 	<tr>
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-php.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/php.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/php.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-python.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/python.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/python.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-ruby.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/ruby.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/ruby.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>	
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-java.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/java.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/java.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>	
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-csharp.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/csharp.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/csharp.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>		
 	</tr>
 	<tr>
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-javascript.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/javascript.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/javascript.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>		
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-javascript.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/angular.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/angular.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>	
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-objc.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/objc.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/objc.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>		
 		<td width="75" align="center">
 			<a href="https://kin-lane.github.io/api/code/libraries/apimatic-api-android.zip">
-				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/android.png" width="75" />
+				<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/apimatic/icons/android.png" width="75" style="padding: 15px;" />
 			</a>
 		</td>
 		<td width="75" align="center"></td>										
