--- a/code/index.html
+++ b/code/index.html
@@ -58,4 +58,4 @@ These are the code libraries I have generated using <a href="http://apimatic.io/
 		<td width="75" align="center"></td>										
 	</tr>	
 </table>
-<p>If you need any specific integration code, or help please use the <a href="https://github.com/Kin-Lane/api/issues">issue management</a> on the Github repository for the API. You can also take the <a href="http://kin-lane.github.io/api/swagger.json"></a>Swagger definition for this API</a>, and go to <a href="http://apimatic.io">APIMATIC</a> and generate your own libraries.</p>
+<p>If you need any specific integration code, or help please use the <a href="https://github.com/Kin-Lane/api/issues">issue management</a> on the Github repository for the API. You can also take the <a href="http://kin-lane.github.io/api/swagger.json">Swagger definition for this API</a>, and go to <a href="http://apimatic.io">APIMATIC</a> and generate your own libraries.</p>
