--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<script src="https://{{ site.org }}.github.io/master/js/apis-json-home.js" type="text/javascript"></script>
+<script src="http://{{ site.org }}.github.io/master/js/apis-json-home.js" type="text/javascript"></script>
 <div id="jsonNavigator"><table cellpadding="3" cellspacing="2" border="0" width="95%" id="jsonNavigatorTable" style="margin-left: 15px;"></table></div>
 
 <script type="text/javascript">
