--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: {{ site.title }}
     }
 </script>
 
-doing - 6
+doing - 7
 <table cellpadding="3" cellspacing="2" width="100%" border="0" style="margin-top: 10px;">
   <tr>
     <td colspan="3" align="center"><hr /></td>
@@ -28,7 +28,7 @@ doing - 6
 		{% assign apijson = item %}
 
 		<tr>
-	    <td colspan="3" align="center">{{ apijson.apis }}</td>
+	    <td colspan="3" align="center">{{ apijson }}</td>
 	  </tr>
 
 		-{{ apijson.name }}-
