--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@ doing - 8
     <td colspan="3" align="center"><hr /></td>
   </tr>
 
-{% for item in site.data %}
+{% for item in site.data.apis %}
 
 		{% assign apijson = item %}
+
+		<tr>
+	    <td colspan="3" align="center">{{ apijson }}</td>
+	  </tr>
 
 		-{{ apijson.name }}-
 
