--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: {{ site.title }}
     }
 </script>
 
-doing - 9
+doing - 10
 <table cellpadding="3" cellspacing="2" width="100%" border="0" style="margin-top: 10px;">
   <tr>
     <td colspan="3" align="center"><hr /></td>
@@ -26,7 +26,7 @@ doing - 9
 {% for apijson in site.data.apis %}
 
 		{% assign common_api_action_url = '' %}
-
+    name: {{ apijson.name }}--
     {% if apijson.specificationVersion != null %}
 
       {% assign blog_url = '' %}
