--- a/index.html
+++ b/index.html
@@ -17,19 +17,13 @@ title: {{ site.title }}
     }
 </script>
 
-doing - 1
+doing - 2
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center"><hr /></td>
   </tr>
 
 {% for apijson in site.data.apis %}
-
-		<tr>
-	    <td align="center">{{ apijson }}</td>
-	  </tr>
-
-		-{{ apijson.name }}-
 
 		{% assign common_api_action_url = '' %}
 
@@ -135,9 +129,10 @@ doing - 1
         <tr>
           <td>[list others]</td>
           <td>
-            <table width="100%">
+            <table width="100%" border="1">
             <tr>
               <td align="center" style="margin-left: 90px; margin-right: 90px;">
+
                   {% assign api_action_url = '' %}
                   {% assign numberofapis = apijson.apis | size %}
 
