--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: {{ site.title }}
 doing - 2
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
-    <td align="center"><hr /></td>
+    <td align="center" colspan="2"><hr /></td>
   </tr>
 
 {% for apijson in site.data.apis %}
@@ -64,7 +64,7 @@ doing - 2
       {% endif %}
 
         <tr>
-          <td>
+          <td colspan="2">
             {% if apijson.image != null %}
               <a href="{{ website_url }}">
                 <img src="{{ apijson.image }}" align="left" style="padding: 5px;" width="150" />
@@ -75,7 +75,7 @@ doing - 2
           </td>
         </tr>
         <tr>
-          <td align="center" style="margin-left: 25px; margin-right: 25px;">
+          <td colspan="2" align="center" style="margin-left: 25px; margin-right: 25px;">
             <ul style="list-style: none; display: inline;">
               {% if portal_url != '' %}
                 <li style="display: inline; padding-left: 15px; padding-right: 15px;">
@@ -127,8 +127,8 @@ doing - 2
           </td>
         </tr>
         <tr>
-          <td>[list others]</td>
-          <td>
+          <td width="50%" align="center">[list others]</td>
+          <td width="50%" align="center">
             <table width="100%" border="1">
             <tr>
               <td align="center" style="margin-left: 90px; margin-right: 90px;">
