--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: page
-title: {{ site.title }}
+title: Kin Lane API API
 ---
-
 <script type="text/javascript">
   function showme($id)
     {
@@ -17,7 +16,7 @@ title: {{ site.title }}
     }
 </script>
 
-doing - 2
+doing - 3
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -128,7 +127,7 @@ doing - 2
         </tr>
         <tr>
           <td width="50%" align="center">[list others]</td>
-          <td width="50%" align="center">
+          <td width="50%">
             <table width="100%" border="1">
             <tr>
               <td align="center" style="margin-left: 90px; margin-right: 90px;">
