--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@ doing - 3
                   {% assign api_action_url = '' %}
                   {% assign numberofapis = apijson.apis | size %}
 
-                    <p style="font-size: 18px; text-align: left; margin-left: 117px;"><strong>APIs:</strong></p>
+                    <p style="font-size: 18px;"><strong>APIs</strong></p>
                       {% assign api_action_url = '' %}
                       {% for api in apijson.apis %}
 
-                      <table cellpadding="3" cellspacing="2" width="70%" border="0">
+                      <table cellpadding="3" cellspacing="2" width="100%" border="0">
 
                           {% assign api_action_spec = '' %}
                           {% assign api_action_url = '' %}
@@ -181,8 +181,8 @@ doing - 3
                             </td>
                             <td align="right">
                               {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                                <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec">
-                                  <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-swagger-round.png" width="25" align="right" />
+                                {{ openapi_spec_url }} - <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec">
+                                  <img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/openapi-spec/open-api-spec-icon.png" width="25" align="right" />
                                 </a>
                               {% endif %}
                               {% if api_blueprint_url != null and api_blueprint_url != empty %}
