--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ layout: page
       }
     }
 </script>
+Doing - 1
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -22,7 +23,7 @@ layout: page
 {% for folder in site.data %}
   {% for item in folder %}
     {% assign file = item %}
-
+    {{ file }}
     {% if file.apis != null %}
         {% assign apijson = file.apis %}
     		{% assign common_api_action_url = '' %}
