--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-Doing - 2
+Doing - 3
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -23,6 +23,8 @@ Doing - 2
 {% for folder in site.data %}
   {% for item in folder %}
     {% assign file = item %}
+
+    {{ file.apis }}
 
     {% if file.apis != null %}
 
