--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-Doing - 3
+Doing - 4
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -24,7 +24,7 @@ Doing - 3
   {% for item in folder %}
     {% assign file = item %}
 
-    {{ file.apis }}
+    {{ file }}
 
     {% if file.apis != null %}
 
