--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Doing - 7
   {% for item in folder %}
     {% assign file = item %}
     {{ file }}
-
+    here:
     {% if file.apis != null %}
 
         {% assign apijson = this.apis %}
