--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@ Doing - 7
 
 {% for folder in site.data %}
   {% for item in folder %}
-    {% for this in item %}
-    {% assign file = this %}
-    {% if file.apis != null %}
+
+    {% assign file = item[1] %}
+    {{ file }}
+    {% if this.apis != null %}
 
         {% assign apijson = this.apis %}
     		{% assign common_api_action_url = '' %}
+
+        {{ apijson }}
 
         {% if apijson.specificationVersion != null %}
 
@@ -237,7 +240,6 @@ Doing - 7
         </tr>
         {% endif %}
       {% endif %}
-    {% endfor %}
     {% endfor %}
   {% endfor %}
 </table>
