--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-Doing - 7
+Doing - 8
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -22,8 +22,8 @@ Doing - 7
 
 {% for folder in site.data %}
   {% for item in folder %}
-
-    {% assign file = item[1] %}
+    {% assign this = item %}
+    {% assign file = this[1] %}
     {{ file }}
     {% if this.apis != null %}
 
