--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-Doing - 8
+Doing - 9
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -23,8 +23,7 @@ Doing - 8
 {% for folder in site.data %}
   {% for item in folder %}
     {% assign this = item %}
-    {% assign file = this[1] %}
-    {{ file }}
+    {{ this }}
     {% if this.apis != null %}
 
         {% assign apijson = this.apis %}
