--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-Doing - 14
+Doing - 15
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -23,8 +23,8 @@ Doing - 14
 {% for folder in site.data %}
 
     {% assign apisjson = folder[1] %}
-    {% assign apiscommons = folder[2] %}
-    {{ apiscommons }}
+
+    {{ apisjson }}
     {% if apisjson.apis != null %}
 
         {% assign apijson = this.apis %}
