--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-Doing - 16
+Doing - 17
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -22,7 +22,10 @@ Doing - 16
 
 {% for folder in site.data %}
 
-    {% assign apisjson = folder[1] %}
+    {% assign content = folder[1] %}
+    {{ content }}
+    <hr />
+    {% assign apisjson = content | map: 'apis' %}
 
     {% if apisjson.apis != null %}
 
