--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-working - 7
+working - 8
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -200,6 +200,7 @@ working - 7
                         </a>
                       </td>
                     </tr>
+                    <tr><td> {{ openapi_spec_json }}</td></tr>
                     <tr style="display: none;" id="methods-for-{{ pathname }}">
                       <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
                       ---  {{ openapi_spec_json }}999
